--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,3 +1,16 @@
 body {
   font-family: 'Lato', sans-serif;
+  margin: auto;
+}
+
+
+.logo {
+  font-family: 'Allura', cursive;
+  font-size: 48px;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  background-color: lavender;
 }
