--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -4,6 +4,10 @@ body {
   background-color: rgba(225, 216, 255, 0.2);
 }
 
+section {
+  text-align: center;
+}
+
 /* Nav Bar */
 
 nav {
@@ -82,26 +86,20 @@ header hr {
 
 /* Portfolio */
 
-.portfolio-header {
+.section-header {
   text-align: center;
   margin: 20px auto;
 }
 
-.portfolio-header hr {
-  border: 2px solid lightgrey;
+.section-header hr {
+  border: 2px solid rgba(28, 0, 99, 0.9);
   width: 50%;
-  /* text-align: left; */
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(11, 1fr);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
 }
 
 .checkerboard {
+  display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(100px, auto);
   grid-gap: 50px;
 }
 
@@ -145,17 +143,19 @@ header hr {
   opacity: 0.5;
 }
 
-.contact {
-    height: 800px;
-}
+/* contact & social */
 
 #social {
+  text-align: center;
+}
+
+.social {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-#social a {
+.social a {
   text-decoration: none;
   color: rgba(0,0,0,0.8);
   margin: 5px;
@@ -163,7 +163,7 @@ header hr {
   align-items: center;
 }
 
-#social a:hover {
+.social a:hover {
   color: rgba(255,255,255,1);
   background: rgba(0,0,0,0.8);
 }
@@ -230,5 +230,11 @@ header hr {
   .proj-img-wrapper {
     width: 95%;
     margin: 0 0 30px 0;
+  }
+  #social {
+    margin: 0;
+  }
+  #social h2 {
+    margin-top: 0;
   }
 }
