--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -170,6 +170,10 @@ ul {
   align-items: center;
 }
 
+.social p {
+  margin: 0 100px;
+}
+
 .social a {
   text-decoration: none;
   color: rgba(0,0,0,0.8);
