--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -164,7 +164,7 @@ ul {
   text-align: center;
 }
 
-#social p {
+p {
   margin: 25px 100px;
 }
 
@@ -227,6 +227,9 @@ footer {
   nav {
     margin: 20px 35px 20px 20px;
   }
+  .logo {
+    font-size: 32px;
+  }
   .header-text {
     max-width: 95%;
     text-align: center;
@@ -248,14 +251,22 @@ footer {
   header {
     height: 450px;
   }
-  .proj-img-wrapper {
+  .section-header {
+    margin: 25px 0;
+  }
+  .checkerboard div {
     width: 95%;
-    margin: 0 0 30px 0;
+  }
+  .proj-img-wrapper {
+    margin: 0 0 25px 0;
   }
   #social {
     margin: 0;
   }
   #social h2 {
     margin-top: 0;
+  }
+  p, footer {
+    margin: 25px;
   }
 }
