--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -111,7 +111,7 @@ header hr {
   height: 200px;
   border-radius: 50%;
   overflow: hidden;
-  margin: 10px;
+  margin: 10px 25px;
 }
 
 .profile-img img {
