--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -45,6 +45,7 @@ section {
 
 nav {
   margin: auto 50px;
+  color: white;
 }
 
 .logo {
@@ -59,7 +60,7 @@ nav {
   display: flex;
   justify-content: space-between;
   background-color: rgba(0,0,0,0.8);
-  padding: 0 0 0 30px;
+  padding: 0 30px 0 60px;
   position: fixed;
 }
 
@@ -185,7 +186,7 @@ ul {
   align-items: center;
 }
 
-.social a:hover {
+.link-wrapper:hover {
   color: rgba(255,255,255,1);
   background: rgba(0,0,0,0.8);
 }
