--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -52,7 +52,7 @@ nav {
   font-family: 'Allura', cursive;
   font-size: 48px;
   color: rgba(255,255,255,1);
-  margin: 15px 0 15px 0;
+  margin: 15px 50px;
 }
 
 .nav-bar {
@@ -60,7 +60,6 @@ nav {
   display: flex;
   justify-content: space-between;
   background-color: rgba(0,0,0,0.8);
-  padding: 0 30px 0 60px;
   position: fixed;
 }
 
