--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -185,7 +185,7 @@ ul {
   align-items: center;
 }
 
-.link-wrapper:hover {
+.link-wrapper a:hover {
   color: rgba(255,255,255,1);
   background: rgba(0,0,0,0.8);
 }
@@ -198,7 +198,6 @@ ul {
 footer {
   margin: 50px;
 }
-
 
 @media only screen and (max-width: 800px) {
   header {
