--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Lato', sans-serif;
   margin: auto;
-  background-color: rgba(225, 216, 255, 0.2);
+  background-color: rgba(225, 216, 255, 0.1);
 }
 
 section {
@@ -71,8 +71,7 @@ nav {
 }
 
 .nav-bar a:hover {
-  background-color: rgba(255,255,255,1);
-  color: black;
+  text-decoration: underline;
 }
 
 /* Header */
@@ -162,11 +161,14 @@ ul {
 /* contact & social */
 
 #social {
-  text-align: center;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
 }
 
-#social p {
-  margin: 25px 100px;
+.contact {
+  width: 80%;
+  margin: 0;
 }
 
 .social {
@@ -185,9 +187,12 @@ ul {
   align-items: center;
 }
 
-.link-wrapper a:hover {
-  color: rgba(255,255,255,1);
-  background: rgba(0,0,0,0.8);
+.social a:hover {
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 .fab, .fas {
