--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -187,9 +187,10 @@ ul {
 .social a {
   text-decoration: none;
   color: rgba(0,0,0,1);
-  margin: 5px;
+  margin: 0 10px;
   padding: 5px;
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
