Change nav bar background color

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -65,7 +65,7 @@ nav {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  background-color: rgba(0,0,0,0.8);
+  background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(230, 230, 250, 0.8));
   position: fixed;
 }
 
